update layout to resolve responsive design bug, this is stop gap for now

--- a/app/assets/stylesheets/theme_previews.css
+++ b/app/assets/stylesheets/theme_previews.css
@@ -2,7 +2,6 @@
 /* theme selector for user theme selection form */
 .theme-previews {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Two columns layout */
   gap: 20px;
   padding: 30px;
   justify-content: center;
